--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "gregg"]
 	path = gregg
 	url = https://github.com/brendangregg/msr-cloud-tools/
+[submodule "rossum"]
+	path = rossum
+	url = https://github.com/gvanrossum/ctok/
